k8s/ingress/config/aa.pttech.cc_nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-hrzx-java-ingress
  namespace: hrzx
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - admin.bzhjyl.com
  #   secretName: wap-pttech-tls
  rules:
  - host: admin.bzhjyl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hrzx-admin-java-svc
            port:
              number: 7070
